<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivityPopUp"
    android:gravity="center"
    android:background="@drawable/gameover2"
    >

    <TableRow
        android:id="@+id/table1"
        android:layout_below="@+id/table3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        tools:ignore="UselessParent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="125dp"
            android:src="@drawable/crystal"
            tools:ignore="ContentDescription" />
        <TextView
            android:text="@string/get_points"
            android:textColor="@color/White"
            android:textSize="30sp"
            android:textStyle="bold"/>
    </TableRow>
    <TableRow
        android:id="@+id/table2"
        android:layout_below="@+id/table1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/ssPik"
            android:layout_width="wrap_content"
            android:layout_height="125dp"
            android:src="@drawable/spikesmall"
            tools:ignore="ContentDescription"

            />
        <TextView
            android:layout_marginStart="10dp"
            android:text="@string/lose_points"
            android:textColor="@color/White"
            android:textSize="30sp"
            android:textStyle="bold"
            />

    </TableRow>
    <TableRow
        android:id="@+id/table3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        tools:ignore="UselessParent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="125dp"
            android:src="@drawable/treesymbol"
            tools:ignore="ContentDescription"

            />
        <TextView
            android:text="@string/game_overpop"
            android:textColor="@color/White"
            android:textSize="30sp"
            android:textStyle="bold"/>

    </TableRow>


</RelativeLayout>