<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/backgroundnew4"
    >

    <ImageView
        android:id="@+id/b1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/dodobird1"
        android:layout_above="@+id/text1"
        android:layout_centerHorizontal="true"
        tools:ignore="ContentDescription" />


    <ImageView
        android:id="@+id/c1"
        android:layout_width="165dp"
        android:layout_height="90dp"
        android:layout_above="@+id/b1"
        android:layout_marginBottom="50dp"
        android:src="@drawable/cloud"
        android:layout_alignParentStart="true"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/c2"
        android:layout_width="165dp"
        android:layout_height="90dp"
        android:layout_above="@+id/b1"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="50dp"
        android:src="@drawable/cloud"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/c3"
        android:layout_width="165dp"
        android:layout_height="90dp"
        android:layout_above="@+id/c1"
        android:layout_centerHorizontal="true"
        android:src="@drawable/cloud"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/do_do_tap"
        android:textSize="80sp"
        android:textStyle="bold"
        android:textColor="@color/dodoPurple"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text1"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/dodoPurple"
        android:onClick="startGame"
        android:text="@string/play_button"
        android:textColor="@color/White"
        android:textSize="30sp"
        android:layout_marginTop="30dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/abtButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/dodoPurple"
        android:onClick="aboutPopUp"
        android:text="@string/about_button"
        android:textColor="@color/White"
        android:textSize="30sp"
        android:layout_marginTop="30dp"
        android:textStyle="bold" />

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/bannerMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="ca-app-pub-6760992196528607/3165773791">
    </com.google.android.gms.ads.AdView>


</RelativeLayout>

